--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
   <nav>
     <div class="logo">
-      <img src="C:\Users\91729\Downloads\imageras.jpg" alt="RASPBERRY Logo">
+      <img src="imageras.jpg" alt="RASPBERRY Logo">
       <span>
         <span class="arabic">رازبيري</span>
         <span class="english">RASPBERRY</span>
