--- a/index.html
+++ b/index.html
@@ -236,7 +236,16 @@
     </p>
 
     <h3>Location</h3>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3609.285132628323!2d55.78832797539232!3d25.066625777787914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ef5e1b5c0489db7%3A0x8933d55301d576cb!2sFour%20Plus%20Mobile%20Phones!5e0!3m2!1sen!2sae!4v1712841294109!5m2!1sen!2sae" width="100%" height="300" style="border:0; border-radius: 10px; margin: 20px 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <p>RASPBERRY PHONES<br>
+       📱 +971 50 100 3929<br>
+       <a href="https://g.co/kgs/qx6p3ZZ" target="_blank">Click here for the location</a><br>
+       Opp. Murabba Police Station, Al Ain - U.A.E</p>
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d116436.14124884394!2d55.694065834000796!3d24.21975533137951!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x3e8ab72be055bcc5%3A0x7886857a95c562f6!2sAl%20muraba'a%20-%20opposite%20police%20station%20-%20Abu%20Dhabi!3m2!1d24.2197775!2d55.776467399999994!5e0!3m2!1sen!2sae!4v1744358736400!5m2!1sen!2sae" 
+    width="500" height="300" style="border:0; border-radius: 10px; margin:20px 0;" 
+    allowfullscreen="" loading="lazy" 
+    referrerpolicy="no-referrer-when-downgrade">
+  </iframe>
 
     <h3>Contact Form</h3>
     <form action="https://formspree.io/f/xoqgdgar" method="POST">
