--- a/index.html
+++ b/index.html
@@ -70,6 +70,16 @@
       font-size: 2.8em;
       margin-bottom: 20px;
     }
+    header.hero h1 {
+  font-size: 2.8em;
+  margin-bottom: 20px;
+  color: #333; /* Darker color for better contrast */
+}
+
+header.hero p {
+  font-size: 1.9em;
+  color: red; /* Darker color for better contrast */
+}
     section {
       padding: 60px 20px;
       max-width: 1200px;
