--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
       animation: fadeIn 2s ease-in;
     }
     header.hero h1 {
-      font-size: 2.8em;
+      font-size: 2.8em
       margin-bottom: 20px;
     }
     header.hero h1 {
-  font-size: 1.5em;
+  font-size: 2.8em;
   margin-bottom: 20px;
   color: #333; /* Darker color for better contrast */
 }
 
 header.hero p {
-  font-size: 1.9em;
+  font-size: 1.2em;
   color: red; /* Darker color for better contrast */
 }
     section {
