--- a/index.html
+++ b/index.html
@@ -111,11 +111,12 @@ header.hero p {
       justify-content: center;
     }
     .gallery img {
-      width: 100%;
-      max-width: 250px;
+       width: 125%;
+      max-width:200px;
       margin: 10px;
-      border-radius: 8px;
+      border-radius: 4px;
       transition: transform 0.3s ease;
+
     }
     .gallery img:hover {
       transform: scale(1.05);
@@ -224,9 +225,10 @@ header.hero p {
   <section id="gallery">
     <h2>Gallery</h2>
     <div class="gallery">
-      <img src="https://images.unsplash.com/photo-1510557880182-3f8a5f7fc05c" alt="Mobile 1">
-      <img src="https://images.unsplash.com/photo-1512499617640-c2f99912c76e" alt="Mobile 2">
-      <img src="/mnt/data/WhatsApp%20Image%202025-04-10%20at%2011.20.16%20PM.jpeg" alt="QR Code">
+      <img src="jonas-leupe-wK-elt11pF0-unsplash.jpg" alt="Mobile 1">
+      <img src="michael-c-CgLRqyW65Mw-unsplash.jpg" alt="Mobile 2">
+      <img src="WhatsApp Image 2025-04-11 at 1.54.53 PM.jpeg" alt="QR Code">
+
     </div>
   </section>
 
